--- a/.env
+++ b/.env
@@ -1,3 +1,6 @@
 # Preprocessing of the dumb sample
 SAMPLE_SIZE = 0.1
-SIZE = 64
+IMAGE_SIZE = 64
+CHEMIN_1 = <YOUR_FILE_NAME>
+CHEMIN_2 = <YOUR_FILE_NAME>
+CHEMIN_METADATA = <YOUR_METADATA_FILE_NAME>
