add .envrc, updated data.py, updated main.py

--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
 # Preprocessing of the dumb sample
-SAMPLE_SIZE = 0.1
-IMAGE_SIZE = 64
-CHEMIN_1 = <YOUR_FILE_NAME>
-CHEMIN_2 = <YOUR_FILE_NAME>
-CHEMIN_METADATA = <YOUR_METADATA_FILE_NAME>
+SAMPLE_SIZE=0.1
+IMAGE_SIZE=64
+CHEMIN_1='/home/pavel/code/Capucine-Darteil/Skin_Images/raw_data/HAM10000_images_part_1'
+CHEMIN_2='/home/pavel/code/Capucine-Darteil/Skin_Images/raw_data/HAM10000_images_part_2'
+CHEMIN_METADATA='/home/pavel/code/Capucine-Darteil/Skin_Images/raw_data/HAM10000_metadata.csv'
