--- a/.env
+++ b/.env
@@ -4,3 +4,5 @@ IMAGE_SIZE=64
 CHEMIN_1='/home/pavel/code/Capucine-Darteil/Skin_Images/raw_data/HAM10000_images_part_1'
 CHEMIN_2='/home/pavel/code/Capucine-Darteil/Skin_Images/raw_data/HAM10000_images_part_2'
 CHEMIN_METADATA='/home/pavel/code/Capucine-Darteil/Skin_Images/raw_data/HAM10000_metadata.csv'
+
+# this is a test
