--- a/.env
+++ b/.env
@@ -3,6 +3,7 @@ SAMPLE_SIZE=0.1
 IMAGE_SIZE=64
 CHEMIN_1='/home/pavel/code/Capucine-Darteil/Skin_Images/raw_data/HAM10000_images_part_1'
 CHEMIN_2='/home/pavel/code/Capucine-Darteil/Skin_Images/raw_data/HAM10000_images_part_2'
+CHEMIN_3='/home/pavel/code/Capucine-Darteil/Skin_Images/raw_data/df_complet_64x64.csv'
 CHEMIN_METADATA='/home/pavel/code/Capucine-Darteil/Skin_Images/raw_data/HAM10000_metadata.csv'
 
 # this is a test
